--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,15 +1,15 @@
 @tailwind base;
 
-body {
-  @apply .bg-gray-100 .font-sans .antialiased;
+@layer base {
+  body {
+    @apply font-sans antialiased;
+  }
 }
 
 body.ReactModal__Body--open > div[aria-hidden="true"] {
-  filter: blur(2px);
+  filter: blur(1px);
 }
-
 @tailwind components;
-
 @tailwind utilities;
 
 .grayscale-1 {
